# alfaomega

./: README.md  parser.py  pyproject.toml  requirements.txt
tests/: test_alfaomega.py
