[tool.poetry]
name = "alfaomega"
version = "0.1.0"
description = ""
authors = ["yatmanov"]

[tool.poetry.dependencies]
python = "^3.6"
lxml = "^4.5.2"
aiohttp = "^3.6.2"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
